Security/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
spec:
  podSelector:
    matchLabels:
      app: my-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: backend
        - namespaceSelector:
            matchLabels:
              project: my-project
        - ipBlock:
            cidr: 10.0.0.0/24
            except:
              - 10.0.0.1/32
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              role: database
        - namespaceSelector:
            matchLabels:
              project: my-project
        - ipBlock:
            cidr: 192.168.0.0/16
            except:
              - 192.168.1.0/24
      ports:
        - protocol: TCP
          port: 3306
